--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,645</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">233</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">april_9th.QueryParam</td><td><a href="#m0">query</a></td><td rowspan="1">1747248180574</td><td rowspan="1">3742</td></tr><tr class="passedeven"><td><a href="#m1">query1</a></td><td rowspan="1">1747248184319</td><td rowspan="1">851</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">practicesession.DataProvider2</td><td><a href="#m0">validateCategoryItem</a></td><td rowspan="3">1755584319652</td><td rowspan="3">6</td></tr><tr class="passedeven"><td><a href="#m1">validateCategoryItem</a></td></tr><tr class="passedeven"><td><a href="#m2">validateCategoryItem</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">april_9th.QueryParam#query</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">april_9th.QueryParam#query1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">practicesession.DataProvider2#validateCategoryItem</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>1</td><td>Dogs</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">practicesession.DataProvider2#validateCategoryItem</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>111</td><td>Dogs1111</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">practicesession.DataProvider2#validateCategoryItem</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>221</td><td>Dogs2222</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
