--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\GA\AppData\Local\Temp\testng-eclipse-362521746\testng-customsuite.xml</span>
+                    <span>C:\Users\GA\AppData\Local\Temp\testng-eclipse--1471511939\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="april_9th.QueryParam" class="method navigator-link" hash-for-method="query">query</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practicesession.DataProvider2" class="method navigator-link" hash-for-method="validateCategoryItem(1, Dogs)">validateCategoryItem(1, Dogs)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="april_9th.QueryParam" class="method navigator-link" hash-for-method="query1">query1</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practicesession.DataProvider2" class="method navigator-link" hash-for-method="validateCategoryItem(111, Dogs1111)">validateCategoryItem(111, Dogs1111)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="practicesession.DataProvider2" class="method navigator-link" hash-for-method="validateCategoryItem(221, Dogs2222)">validateCategoryItem(221, Dogs2222)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +131,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">april_9th.QueryParam</span>
+              <span class="class-name">practicesession.DataProvider2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="query">
-                  </a> <!-- query -->
-                  <span class="method-name">query</span>
+                  <a name="validateCategoryItem(1, Dogs)">
+                  </a> <!-- validateCategoryItem(1, Dogs) -->
+                  <span class="method-name">validateCategoryItem</span>
+                  <span class="parameters">(1,Dogs)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="query1">
-                  </a> <!-- query1 -->
-                  <span class="method-name">query1</span>
+                  <a name="validateCategoryItem(111, Dogs1111)">
+                  </a> <!-- validateCategoryItem(111, Dogs1111) -->
+                  <span class="method-name">validateCategoryItem</span>
+                  <span class="parameters">(111,Dogs1111)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateCategoryItem(221, Dogs2222)">
+                  </a> <!-- validateCategoryItem(221, Dogs2222) -->
+                  <span class="method-name">validateCategoryItem</span>
+                  <span class="parameters">(221,Dogs2222)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\GA\AppData\Local\Temp\testng-eclipse-362521746\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\GA\AppData\Local\Temp\testng-eclipse--1471511939\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +172,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;april_9th.QueryParam&quot;/&gt;
+      &lt;class name=&quot;practicesession.DataProvider2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'query')
-data.setCell(0, 2, 'april_9th.QueryParam')
-data.setCell(0, 3, 3742);
+data.setCell(0, 1, 'validateCategoryItem')
+data.setCell(0, 2, 'practicesession.DataProvider2')
+data.setCell(0, 3, 6);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'query1')
-data.setCell(1, 2, 'april_9th.QueryParam')
-data.setCell(1, 3, 851);
+data.setCell(1, 1, 'validateCategoryItem')
+data.setCell(1, 2, 'practicesession.DataProvider2')
+data.setCell(1, 3, 2);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'validateCategoryItem')
+data.setCell(2, 2, 'practicesession.DataProvider2')
+data.setCell(2, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 10 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,14 +255,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">april_9th.QueryParam</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">practicesession.DataProvider2</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">query</span>
+                <span class="method-name">validateCategoryItem(1, Dogs)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">query1</span>
-                <span class="method-start">3745 ms</span>
+                <span class="method-name">validateCategoryItem(111, Dogs1111)</span>
+                <span class="method-start">9 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validateCategoryItem(221, Dogs2222)</span>
+                <span class="method-start">13 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
