--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e26588">  <td>25/05/15 00:13:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QueryParam.query1()[pri:0, instance:april_9th.QueryParam@3bb9a3ff]">query1</td> 
-  <td>main@109228794</td>   <td></td> </tr>
-<tr bgcolor="e26588">  <td>25/05/15 00:13:00</td>   <td>-3746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QueryParam.query()[pri:0, instance:april_9th.QueryParam@3bb9a3ff]">query</td> 
-  <td>main@109228794</td>   <td></td> </tr>
+<tr bgcolor="9d70bd">  <td>25/08/19 11:48:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider2.validateCategoryItem(java.lang.Object,java.lang.Object)[pri:0, instance:practicesession.DataProvider2@9f116cc]">validateCategoryItem</td> 
+  <td>main@1020520290</td>   <td></td> </tr>
+<tr bgcolor="9d70bd">  <td>25/08/19 11:48:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider2.validateCategoryItem(java.lang.Object,java.lang.Object)[pri:0, instance:practicesession.DataProvider2@9f116cc]">validateCategoryItem</td> 
+  <td>main@1020520290</td>   <td></td> </tr>
+<tr bgcolor="9d70bd">  <td>25/08/19 11:48:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider2.validateCategoryItem(java.lang.Object,java.lang.Object)[pri:0, instance:practicesession.DataProvider2@9f116cc]">validateCategoryItem</td> 
+  <td>main@1020520290</td>   <td></td> </tr>
 </table>
